--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@tawk.to/tawk-messenger-react": "^2.0.2",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "next": "14.2.13",
