--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "next": "14.2.13",
+    "nodemailer": "^6.9.15",
     "popper.js": "^1.16.1",
     "react": "^18",
     "react-dom": "^18",
