birthday and membership page

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,5 @@
 EMAIL_USER=web@friskypanda.in
 EMAIL_PASS=GOqkev8qt6EZt3t@
 ADMIN_EMAIL=web@friskypanda.in
+NEXT_PUBLIC_RECAPTCHA_SITE_KEY=friskypanda-1729018166596 
+RECAPTCHA_SECRET_KEY=6LdxWGIqAAAAAC7x7n-KblxfXwnLvLnyhNDcC4Im
