--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "popper.js": "^1.16.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
